--- a/css/css.css
+++ b/css/css.css
@@ -1,7 +1,8 @@
-#root {
+
+.root {
     width: 55%;
     height: auto;
-    display: flex;
+    
     flex-direction: row;
     flex-wrap: wrap;
     border-color: red black green orange;
@@ -9,34 +10,49 @@
     border-style: solid;
     margin: auto;
     justify-content: center;
+    display: none;
+    transition:all 0.3s ease;
 }
-.frutaContenedor{
-    width: 100px;
-    height: 100px;
-    margin: 5px;
-    background-color: #2980B9;
+
+.iniciar{
+    width: 15rem;
+    height: 6rem;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    
+
+    margin: auto;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: fantasy;
+    border-radius: 5rem;
     cursor: pointer;
 }
 .fruta{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     background-color: orange;
     font-size: 0px;
     cursor: pointer;
-
-    transition: all 1s;
-    transform-style: preserve-3d;
-
     display: flex;
     justify-content: center;
     align-items: center;
 
-
+    margin: 5px;
 }
-
-
 .activarIMG{
-    font-size: 30px;
-    transition: 0.37s;
+    font-size:40px;
+    transition:0.8s;
+    background-color: #ffeb3b;
+    transform: rotateY(180deg);
 }
-
+.quitar{
+    display: none;
+}
+.agregar{
+    display: flex;
+    transition:all 0.3s ease;
+}
